--- a/lab04/pvc.yaml
+++ b/lab04/pvc.yaml
@@ -6,7 +6,8 @@ metadata:
     app: hello-world
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
+  storageClassName: local-path
   resources:
     requests:
       storage: 1Gi
